minor changes to ModelValidator (#40)